# daylightsticot

./: Dockerfile  README.md  compose.yaml  pyproject.toml
daylightsticot/: endpoints.py
daylightsticot/domain/: daylight_client.py  entities.py  report_service.py
daylightsticot/infra/: fake_daylight_client.py  open_meteo_daylight_client.py  valkey_cached_client.py
daylightsticot/templates/: delta.html
static/: script.js  style.css
tests/: daylight_service_test.py  factories.py
